# app-mesh

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AppMgr.sln  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  Dockerfile.local  LICENSE  Makefile  Manager.sln  NOTICE  README.md  SECURITY.md  appmesh.vs.sln  autogen.sh  autogen.sh.apt.sh  autogen.sh.mac.sh  autoten.sh.apt.sh  go.mod  go.sum  make.def  q.patch  requirements.txt
src/: CMakeLists.txt  Makefile
src/cli/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Cargo.toml  CommandDispatcher.cpp  CommandDispatcher.h  CommandLine.vcxproj  Makefile  MultipartParser.cpp  MultipartParser.h  Password.cpp  Password.h  appc.sh  appmesh_agent.py  appmesh_arm.py  bash_completion.sh  cli.vcxproj  cmd_args.h  container_monitor.py  main.cpp
src/cli/client/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  cmd_args.h
src/cli/src/: app.rs  client.rs  main.rs
src/cli/tests/: integration_test.rs  remote_test.rs
src/common/: AtomicHandleGuard.hpp  CMakeLists.txt  DateTime.cpp  DateTime.h  DurationParse.cpp  DurationParse.h  FileWrapper.hpp  HttpHeaderMap.h  HttpRequest.cpp  HttpRequest.h  JwtHelper.cpp  JwtHelper.h  Makefile  MessageQueue.cpp  MessageQueue.h  Password.cpp  Password.h  PerfLog.cpp  PerfLog.h  QuitHandler.cpp  QuitHandler.h  RestClient.cpp  RestClient.h  StreamLogger.h  TimeZoneHelper.cpp  TimeZoneHelper.h  TimerHandler.cpp  TimerHandler.h  UriParser.hpp  Utility.cpp  Utility.h  Valgrind.h  croncpp.h  json.cpp  json.h  json.hpp
src/common/jwt-cpp/: jwt.h
src/common/lwsservice/: CMakeLists.txt  Session.cpp  Session.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketService.cpp  WebSocketService.h
src/common/os/: CMakeLists.txt  chown.cpp  chown.h  chown.hpp  filesystem.cpp  filesystem.h  filesystem_linux.cpp  filesystem_macos.cpp  filesystem_posix.cpp  filesystem_windows.cpp  handler.hpp  jobobject.hpp  killtree.hpp  linux.cpp  linux.h  linux.hpp  malloc.hpp  models.h  net.cpp  net.h  net.hpp  proc.cpp  proc.h  process.cpp  process.h  process.hpp  process_linux.cpp  process_macos.cpp  process_windows.cpp  procstat.hpp  pstree.cpp  pstree.h  pstree.hpp  sigchld_guard.h  sysinfo.cpp  sysinfo.h  sysinfo_linux.cpp  sysinfo_macos.cpp  sysinfo_windows.cpp  user.cpp  (+3 more)
src/common/websockets/: CMakeLists.txt  Session.cpp  Session.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketService.cpp  WebSocketService.h
src/common/wildcards/: cx.hpp  wildcards.hpp
src/daemon/: AppProcess.cpp  AppProcess.h  Application.cpp  Application.h  ApplicationInitialize.cpp  ApplicationInitialize.h  ApplicationOnetime.cpp  ApplicationOnetime.h  ApplicationPeriodRun.cpp  ApplicationPeriodRun.h  ApplicationShortRun.cpp  ApplicationShortRun.h  ApplicationUnInitia.cpp  ApplicationUnInitia.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ConsulConnection.cpp  ConsulConnection.h  ConsulEntity.cpp  ConsulEntity.h  DailyLimitation.cpp  DailyLimitation.h  DockerProcess.cpp  DockerProcess.h  HealthCheckTask.cpp  HealthCheckTask.h  Label.cpp  Label.h  LinuxCgroup.cpp  LinuxCgroup.h  Makefile  MonitoredProcess.cpp  MonitoredProcess.h  PersistManager.cpp  PersistManager.h  PrometheusRest.cpp  PrometheusRest.h  ResourceCollection.cpp  ResourceCollection.h  (+18 more)
src/daemon/application/: AppBehavior.cpp  AppBehavior.h  AppTimer.cpp  AppTimer.h  AppUtils.cpp  AppUtils.h  Application.cpp  Application.h  ApplicationCron.cpp  ApplicationCron.h  ApplicationInitialize.cpp  ApplicationInitialize.h  ApplicationPeriodRun.cpp  ApplicationPeriodRun.h  ApplicationShortRun.cpp  ApplicationShortRun.h  ApplicationUnInitia.cpp  ApplicationUnInitia.h  CMakeLists.txt
src/daemon/consul/: CMakeLists.txt  ConsulConnection.cpp  ConsulConnection.h  ConsulEntity.cpp  ConsulEntity.h  Scheduler.cpp
src/daemon/process/: AppProcess.cpp  AppProcess.h  AttachProcess.cpp  AttachProcess.h  CMakeLists.txt  DockerApiProcess.cpp  DockerApiProcess.h  DockerProcess.cpp  DockerProcess.h  LinuxCgroup.cpp  LinuxCgroup.h  MonitoredProcess.cpp  MonitoredProcess.h  PipeStdoutStrategy.cpp  PipeStdoutStrategy.h  ProcessManager.cpp  ProcessManager.h  StdoutPump.cpp  StdoutPump.h  StdoutStrategy.cpp  StdoutStrategy.h  TimerStdoutStrategy.cpp  TimerStdoutStrategy.h
src/daemon/rest/: CMakeLists.txt  ConsulConnection.cpp  ConsulConnection.h  ConsulEntity.cpp  ConsulEntity.h  Data.cpp  Data.h  EventDispatcher.cpp  EventDispatcher.h  EventTypes.h  FileTransferHandler.cpp  FileTransferHandler.h  ForwardingManager.cpp  ForwardingManager.h  HttpRequest.cpp  HttpRequest.h  PrometheusRest.cpp  PrometheusRest.h  RestBase.cpp  RestBase.h  RestChildObject.cpp  RestChildObject.h  RestHandler.cpp  RestHandler.h  RestTcpServer.cpp  RestTcpServer.h  SSLHelper.cpp  (+13 more)
src/model-env/: CMakeLists.txt  README.md  go.mod
src/prom_exporter/: CMakeLists.txt  Makefile  PromUnitTest.sln  check_names.cc  check_names.h  client_metric.h  collectable.h  counter.cc  counter.h  family.cc  family.h  gauge.cc  gauge.h  histogram.cc  histogram.h  metric_family.h  prom_exporter.sln  prom_exporter.vcxproj  registry.cc  registry.h  serializer.cc  serializer.h  summary.cc  summary.h  text_serializer.cc  text_serializer.h  unit_test.cpp
src/prometheus/: PromUnitTest.sln  PromUnitTest.vcxproj  check_names.h  client_metric.h  collectable.h  gauge.h  histogram.h  registry.cc  summary.cc  summary.h  text_serializer.cc  text_serializer.h
src/sdk/: CMakeLists.txt
src/workflow/: CMakeLists.txt  go.mod  go.sum
test/: CMakeLists.txt  unit_test.cpp
test/application/: CMakeLists.txt  main.cpp
test/datetime/: CMakeLists.txt  main.cpp
test/go/: appmesh_client_test.go
test/process/: CMakeLists.txt  main.cpp
test/python/: test.py  test_appmesh_client.py
test/queue/: MPMCQueue.hpp  mpmc_lockfree_no_new.hpp  mpmc_lockfree_queue.hpp
test/security/: CMakeLists.txt  main.cpp
test/utility/: CMakeLists.txt  main.cpp
test/websockets/: CMakeLists.txt  client.demo.cpp  diagnose_wss.py  libwebsockets_demo.cpp  ws-client-example.cpp  ws-service-example-simple.cpp  ws-service-example.cpp
(+781 files in other folders)
