##########################################################################
# sub dir
##########################################################################
add_subdirectory(common)
add_subdirectory(cli)
add_subdirectory(daemon)
add_subdirectory(sdk/cpp)
add_subdirectory(sdk/python)
# add_subdirectory(src/sdk/rust)
