[package]
name = "appc"
version = "2.2.1"
edition = "2021"
description = "App Mesh CLI - Rust implementation using WSS transport"

[[bin]]
name = "appc"
path = "src/main.rs"

[dependencies]
appmesh = { path = "../sdk/rust" }
clap = { version = "4", features = ["derive", "string"] }
tokio = { version = "1", features = ["full"] }
serde = { version = ">=1, <1.0.220", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rustyline = "18"
rpassword = "7"
dirs = "6"
terminal_size = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
sha2 = "0.11"
pbkdf2 = { version = "0.12", features = ["hmac"] }
rand = "0.8"
hex = "0.4"
url = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
